--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,6 +14,8 @@
     --navbar-color: rgba(54, 53, 53, 0.6);
     --seleccion-color: rgba(124, 123, 123, 0.6);
     --mobile-background-color: #3A4460;
+    --font-size-normal: 20px;
+    --font-size-titulo: 60px;
 }
 html {
 background-image: url("/imagenes/fondo-textura-hormigon-oscuro.jpg");  
@@ -25,11 +27,13 @@ padding: 0 10px 0;
 }
 /*HEADER*/
 .header {
-  background-image: url("/imagenes/navbar_fondo.png");
+  
   background-repeat: no-repeat;
   background-size: contain;
   height: 800px;
-  width: 100%;
+  width: 98.5%;
+  position: fixed;
+  margin: 0 auto;
 }
 
 .nav {
@@ -37,7 +41,8 @@ padding: 0 10px 0;
   margin: 0 auto;
   background-color: var(--navbar-color);    
   line-height: 30px;
-    
+  z-index: 1;
+
 }
 
 .nav-link {
@@ -50,9 +55,10 @@ padding: 0 10px 0;
   margin-right: 40px;
   list-style: none;
   
+  
 }
 .nav-menu-item {
-    font-size: 18px;
+    font-size: var(--font-size-normal);
     margin: 0 10px;
     line-height: 90px;
     text-transform: uppercase;
@@ -75,7 +81,7 @@ padding: 0 10px 0;
     margin: 25px auto 0 auto;
     border: 3px solid #020202;
     border-radius: 8px;
-    font-size: 16px;
+    font-size: var((--font-size-normal)-4);
     max-height: 45px;
     width: 30%;
     opacity: 0.8;
@@ -84,7 +90,24 @@ padding: 0 10px 0;
 .nav-buscador:focus {
     width: 50%;
 }
-
+.secciones-menu {
+  
+  display: flex;
+  color: var(--color-texto-invertido);
+  margin: 1em auto;
+  padding:0 0.5em;
+}
+.secciones-menu-link {
+  padding: 0 4em;
+  font-size: var(--font-size-normal);
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue', sans-serif;
+  text-decoration:overline;
+}
+.secciones-menu-link:hover {
+  color: #c4c4c4;
+}
 /*MAIN*/
 
 /*SECCION DE HAPPYHOUR*/
@@ -94,9 +117,10 @@ padding: 0 10px 0;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
-  font-size: 60px;
+  font-size: 35px;
   
-  margin: 0 0 5em 0;
+  margin: 0 5em 0;
+  padding: 2em 0 5em 0;
   font-family: 'Oswald', sans-serif;
 
 }
@@ -156,6 +180,7 @@ padding: 0 10px 0;
 
 
 .happyhour-2x1 {
+  color: var(--color-texto-invertido);
   text-align:justify;
   padding: 0; /* Elimina el padding para mantener el texto en su lugar */
   animation: typing 5s linear infinite alternate;
@@ -186,7 +211,7 @@ padding: 0 10px 0;
   color:var(--color-texto-invertido);
   text-align: center;
   text-transform: uppercase;
-  font-size: 100px;
+  font-size: var(--font-size-titulo);
   margin: 50px 0 30px 0;
   font-family: 'Bebas Neue', sans-serif;
   text-decoration:overline;
@@ -201,8 +226,8 @@ padding: 0 10px 0;
     
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    max-width: 1700px;
-    height: 700px;
+    max-width: 1100px;
+    height: 500px;
     margin: 10px auto 0  auto;
     padding: 20px 0 0 0;
     border-radius: 1%;
@@ -214,22 +239,21 @@ padding: 0 10px 0;
   }
   #cocktailImage, #mealImage {
     display: flex;
-    margin: 3em 0 0 15em;
-    background-size: cover;
-    width: 300px;
-    height: 400px;
-    border-radius: 3%;
-    opacity: 0.8;
-    -webkit-box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
-    -moz-box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
-    box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
+    margin: 3em 0 0 10em;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 350px;
+    height: 250px;
+    opacity: 0.75;
+    
   }
   #cocktailDetails {
-    margin: 2em 40em 1em 15em;
+    margin: 1em 40em 0 10em;
   }
-  #cocktailName {
-    font-size: 50px;
+  #cocktailName, #mealName {
+    font-size: 35px;
     font-weight: bold;
+    width: 30em;
     color:var(--text-color-inverse);
     margin-bottom: 10px;
     font-family: 'Bebas Neue', sans-serif;
@@ -240,19 +264,27 @@ padding: 0 10px 0;
     font-size: 20px;
     color:#ffff1f;
     margin-bottom: 10px;
-    overflow-wrap: break-word;
+    width: 30em;
+    max-height: 100px; /* Ajusta el valor según el espacio disponible */
+    overflow: auto;
     font-family: 'Noto Sans', sans-serif;
 
   
   }
+   #mealImage {
+    margin: 3em 0 0 42em;
+    opacity: 0.9;
+    width: 320px;
+    height: 220px;
 
+   }
   /*COMIDA*/
   .mealSection{
     background-image: url("/imagenes/Comida.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    max-width: 1700px;
-    height: 800px;
+    max-width: 1100px;
+    height: 500px;
     margin: 30px auto 0  auto;
     padding: 20px 0 0 0;
     border-radius: 1%;
@@ -260,55 +292,29 @@ padding: 0 10px 0;
          inset 0 -3em 3em rgba(0,0,0,0.1),
                0 0  0 3px rgb(90, 90, 90),
                0.3em 0.3em 1em rgba(0,0,0,0.3);
+
   }
-#mealImage {
-  display: flex;
-  margin: 3em 0 0 60em;
-  background-size: cover;
-  width: 500px;
-  height: 350px;
-  border-radius: 3%;
-  opacity: 0.8;
-  -webkit-box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
-  -moz-box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
-  box-shadow: 0px 12px 71px -8px rgba(38,35,38,1);
-  
-}
+
 #mealName {
-  margin: 1em 0 1em 24em;
+  margin:  0.5em 0 0.5em 18em;
   
-  font-size: 40px;
-  color:var(--color-texto);
-  font-family: 'Bebas Neue', sans-serif;
 
 }
 #mealInstructions {
   font-size: 20px;
   color: #ffff1f;
-  margin: 0 1em 1em 34em;
+  margin: 0 1em 1em 22em;
   padding: 0 1em;
-  max-height: 200px; /* Ajusta el valor según el espacio disponible */
+  max-height: 120px; /* Ajusta el valor según el espacio disponible */
   overflow: auto;
 }
 
-
-.volverarriba {
-  display: flex;
-  margin: 2em 2em;
-  font-size: 50px;
-  color: var(--color-texto-invertido);
-}
-.volverarriba-icon {
-    margin-top: 15px;
-}
-
-
 /*NOSOTROS*/
 
-.Nosotros, .galeria h3 {
+.Nosotros {
   
   text-align: center;
-    color: var(--color-texto-invertido);
+  color: var(--color-texto-invertido);
   margin:  5em auto 200px auto;
   font-family: 'Bebas Neue', sans-serif;
 }
@@ -322,11 +328,11 @@ padding: 0 10px 0;
   margin: 0 3em 0 3em;
 }
 .Nosotros-p {
-  font-size: 20px;
-  margin: 3em 4em;
+  font-size: 18px;
+  margin: 1em 4em 3em 4em;
 }
 .Nosotros h3 {
-  font-size: 100px;
+  font-size: var(--font-size-titulo);
   font-weight: bold;
   color:var(--text-color-inverse);
   text-transform: uppercase;
@@ -359,7 +365,8 @@ padding: 0 10px 0;
 /*CONTACTO*/
 
 .wave {
-  
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -368,6 +375,7 @@ padding: 0 10px 0;
     background-color: #4d6160;
     margin: 10px auto 0 auto;    
     font-family: 'Bebas Neue', sans-serif;
+    max-width: 1200px;
 
   }
 
@@ -376,18 +384,18 @@ padding: 0 10px 0;
     justify-content: center;
     align-items: flex-start;
     background-color: #4d6160;
-    margin: 0 15em ;
+    margin: 0 10em ;
     line-height: 40px;
 
     
   }
   .contact-left {
     flex: 1;
-    margin: 60px 0  2em;
+    margin: 44px 0 0 0;
   }
   .contact-right {
     flex: 1;
-    margin: 50px 2em 2em 15em;
+    margin: 42px 2em 5em 10em;
   }
   .contact-left h2 {
     margin-bottom: 20px;
@@ -396,7 +404,7 @@ padding: 0 10px 0;
   .form-group {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin: 20px 0 0 0 ;
   }
   label {
     margin-bottom: 5px;
@@ -417,10 +425,9 @@ padding: 0 10px 0;
   }
   .contact-button {
     
-    width: 50%;
+    width: 30%;
     margin: 10px auto;
-    padding: 10px auto ;
-    
+    padding: 0px auto ;
     color: var(--color-texto-invertido);
     
     border-radius: 5px;
@@ -453,17 +460,20 @@ padding: 0 10px 0;
 
 /*GALERIA DE IMAGENES*/
 
-.galeria h1 {
-  padding: auto;
-  margin: 5em 0 1em 0;
+.galeriatitulo {
+  font-size: var(--font-size-titulo);
+  text-align: center;
+  color: var(--color-texto-invertido);
+  margin:  5em auto 200px auto;
+  font-family: 'Bebas Neue', sans-serif;
 }
+
 .galeriadeimagenes {
   
   display: flex;
+  margin: 0 4em 5em 4em ;
   
-margin: 0 4em 10em 4em ;
-  width: auto;
-  height: 600px;
+  height: 500px;
 }
 .galeriadeimagenes img {
 
@@ -476,7 +486,7 @@ margin: 0 4em 10em 4em ;
 .galeriadeimagenes img:hover {
 
   cursor: crosshair;
-  width: 800px;
+  max-width: 800px;
   opacity: 1;
   filter: contrast(120%);
 }
@@ -494,18 +504,19 @@ margin: 0 4em 10em 4em ;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
-    width: 1500px;
-    height: 700px;
+    overflow: auto;
+    max-width: 1100px;
+    height: 600px;
     margin: 3em auto;
     
     
   }
   /*TEXTO DE ARRIBA*/
   .testimonial-section-h2 {    margin: 0 10px 20px 0;
-    font-size: 40px;
-    color: #ffffff;
+    font-size: var(--font-size-normal);
+    color: var(--color-texto-invertido);
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 40px;
+    
 
     
   }
@@ -514,7 +525,7 @@ margin: 0 4em 10em 4em ;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-    max-width: 1800px;
+    
     margin: 0 auto;
   }
   .testimonial-box {
@@ -526,7 +537,7 @@ margin: 0 4em 10em 4em ;
     padding: 20px;
     margin: 10px;
     width: 300px;
-    height: 500px; /* Establece una altura fija para todos los recuadros */
+    height: 400px; /* Establece una altura fija para todos los recuadros */
   
     transition: transform 0.3s ease;
   }
@@ -550,7 +561,7 @@ margin: 0 4em 10em 4em ;
     color: #fcfcfc;
     text-shadow: 5px #0769e9;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 16px; /* Modifica el tamaño de la fuente */
+    font-size: 14px; /* Modifica el tamaño de la fuente */
     
   }
 
@@ -563,7 +574,7 @@ margin: 0 4em 10em 4em ;
   /*FOOTER*/
 
   footer {
-    width:100%;
+    max-width:100%;
     /*position: absolute;*/
     bottom: 0;
     margin-left: 0;
@@ -571,6 +582,8 @@ margin: 0 4em 10em 4em ;
     /*Imagenes de fondo*/
     background-image: url("/imagenes/fondo-textura-hormigon-oscuro.jpg"); 
     background-size: cover;
+    background-repeat: no-repeat;
+    
    
 }
 
@@ -582,7 +595,9 @@ margin: 0 4em 10em 4em ;
   align-items: center;
 }
 .footer-conteiner-img{
- opacity: 0.6; 
+ opacity: 0.9; 
+ max-width:15%;
+ margin:2em 0 0 0;
 }
 
 .social-iconos , .footer-menu {
@@ -592,11 +607,11 @@ margin: 0 4em 10em 4em ;
 }
 
 .social-icon {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50px;
     /*border: 1px solid #f2f2f2f2;*/
-    background-image: url("imagenes/linkedin.png");
+    background-image: url("/imagenes/linkedin.png");
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -609,11 +624,11 @@ margin: 0 4em 10em 4em ;
 }
 
 .social-icon:nth-of-type(2){
-    background-image: url("imagenes/github.png");
+    background-image: url("/imagenes/github.png");
     background-color: white;
 } 
 .social-icon:nth-of-type(3){
-    background-image: url("imagenes/whatsapp.png");
+    background-image: url("/imagenes/whatsapp.png");
 } 
 
 .footer-conteiner-copy {
