--- a/css/estilo-mobile.css
+++ b/css/estilo-mobile.css
@@ -1,285 +1,151 @@
+@media screen and (max-width: 499px)  {
 
-
-@media only screen and (max-width: 740px) {
+    * {
+        max-width: 499px;
+  }
     html {
-        background-image: none
-        ;
-        background-color: black;
+     
+      background-size: contain;
+      margin: 0;
+      max-width: auto;
+      
     }
     body {
-        padding: 0 3px;
-        }
-    .header {
-        background-image: none;
-        max-width: 600px;  
-        height: auto;
-    }
-     .nav {
-        line-height: 0px;
-    }
-    .nav-menu {
-        margin-right: 0;
-    }
-    .nav-menu-item {
-        font-size: px;
-        margin: 0;
-        line-height: 90px;
-        text-transform: uppercase;
-         
-      }
-      .nav-menu-link {
-          padding: 8px 12px;
-          border-radius: 3px;
-      }
-      .nav-menu-link:hover {
-          background-color: var(--seleccion-color);
-          border-radius: 15px;
-          transition: .5s;
-      }
-      .burguer-item {
-        display: none;
-      }
-      
-      .nav-buscador {
-         display: none;
-      }
-      .nav-buscador:focus {
-          width: 50%;
-      }
-
-      
-    /*MAIN*/
-
-    
-/*SECCION DE HAPPYHOUR*/
-.happyhour {
-    font-size: 30px;
-  }
-  .happyhour-2x1 {
-    display: none;
-  }
-    
-  /*RECOMENDACION DE BEBIDA Y COMIDA*/
-  
-  .recomendacion {
-    font-size: 45px;
-      filter: drop-shadow(0 0 1.5rem rgb(240, 95, 28));
-  }
-  /*COCKTAIL*/
-  
-  
-  .cocktailSection{
-      
-      height: 500px;
-      max-width: 98%; 
-    overflow-wrap: break-word;
-    overflow: auto;
-
-
-      
-    }
-    #cocktailImage, #mealImage {
-      margin: 1em 0 0 1em;
-      
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      opacity: 0.6;
-      
-    }
-    #cocktailDetails {
-      margin: 0;
-    }
-    #cocktailName {
-        margin: 0.5em auto ;
-        padding: 0 1em;
-        text-align: center;
-        color: #dcf0e0;
-      font-size: 40px;
-    }
-    #cocktailInstructions {
-      font-size: 18px;
-      padding: 0 1.5em ;
-      color:#12b7e0;
-      overflow-wrap: break-word;
-      
-  
-    
-    }
-  
-    /*COMIDA*/
-    .mealSection{
-        
-        max-width: 98%;
-      height: 500px;
-      
-    }
-
-  #mealImage {
-    margin: 1em auto 0 8.5em;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    opacity: 0.9;
-  }
-  #mealName {
-    margin: 0.5em auto ;
-        padding: 0 1em;
-        text-align: center;
-        color:var(--color-texto);
-      font-size: 25px;
-  }
-  #mealInstructions {
-    font-size: 16px;
-    font-weight: bold;
-    color:rgb(12, 12, 11);
-    margin: 0 1em 1em 0em;
-    padding: 0 1.5em;
-  }
-    
-  .volverarriba {
-    display: none;
-  }
-  
-  /*NOSOTROS*/
-  
-  .Nosotros-desarrollo {
-    flex-direction: column;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-   .Nosotros-img{
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-  .Nosotros-p {
-    font-size: 16px;
-    margin: 2em 0;
-  }
-  .Nosotros h3 {
-    font-size: 50px;
-  }
-  
-  
-  /*GALERIA DE IMAGENES*/
-  
-  .galeriadeimagenes {
-    display: none;
-  }
-  
-    /*CONTACTO*/
-  
-   
-    .contact-container {
-        display: none;
-    }
-    .wave {
-        display: none;
-    }
-  
-  /*RAMDON USER*/  
-  
-  .testimonial-section {
-      
-      padding: 20px 0;
-      
-      background-image: none;
-      height: 1500px;
-      max-width: 98%;
-      margin: 0;
       padding: 0;
       
-          
     }
-    /*TEXTO DE ARRIBA*/
-    .testimonial-section-h2 {    
-      margin: 0;
+      /*HEADER*/
+      .header {
+        background-image: url("../imagenes/navbar_fondo.png");
+        background-size:cover;
+        background-repeat: no-repeat;
+        height: auto;
+      }
       
-      font-size: 25px;
-      filter: drop-shadow(0 0 0.7rem rgba(241, 82, 18, 0.9));
-      
-  
-      
-    }
-    .testimonial-carousel {
-      max-width: 98%;
+        
        
-      flex-wrap: wrap;
-      flex-grow: initial;
-      flex-basis: content;
-      
-      
-    }
-    .testimonial-box {
-           
-      box-shadow: 20px #e41ae444;
-      border: #6f1097 solid;
-      border-radius: 50px;
-      max-height: 400px;
-    }
-    
-    .testimonial-box img {
-      padding-top: 30px ;
-      border-radius: 50%;
-      margin:  0px 0 10px 0;
-     
-    }
-    
-    .testimonial-box p {
-      margin: 40px auto;
-      font-size: 14px; /* Modifica el tamaño de la fuente */
-      
-    }
+      .burger-item {
+        display: flex;
   
+      }
+      .nav-buscador {
+        display: none;
+    }
+    
+      .nav {
+        display: flex;
+        align-items: flex-end;
+        justify-content:space-between ;
+        margin: auto;
+      }
+
+      .nav-menu {
+        margin-right: 0;
+        max-width: auto;
+      }
+      .nav-menu-item {
+        margin: auto;
+        line-height: 70px;
+       }
+       .nav-menu-link {
+        padding: auto;
+       }
+       .secciones-menu {
+        display: none;
+      }
+      .secciones-menu.active {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+        margin: auto;
+        padding:auto;
+      }
+      .secciones-menu-link {
+        
+        padding: auto;
+        font-size: var(--font-size-normal);
+        text-decoration:none;
+      }
+      .secciones-menu-link:hover {
+        color: #c4c4c4;
+        transform: scale(1.2);
+      }
+      .happyhour {
+       
+        justify-content: center;
+        align-items: center;
+       
+      
+      }
+
+      .happyhour-2x1 {
+        text-align:center;
+      }
+      
+@keyframes typing {
+    0% {
+      transform: translateX(none);
+    }
+   
+  }
+
+      .cocktailSection, .mealSection{
+      
+        max-width: auto;
+        margin: 10px 10px;
+        height: auto;
+        
+    }
+    #cocktailInstructions {
+        font-size: 16px;
+        margin: 1px;
+        width: 30em;
+        max-height: auto; /* Ajusta el valor según el espacio disponible */
+        
+      }
+  
+     #mealInstructions {
+    font-size: 16px;
+    color: #ffff1f;
+    margin: 0 1em 1em 10em;
+    padding: 0 1em;
+    max-height: auto; /* Ajusta el valor según el espacio disponible */
+  }
+   #mealImage {
+    margin: auto;
+    opacity: 0.9;
+    width: 320px;
+    height: 220px;
+
+   }
+    #mealName {
+    font-size: 26px;
+    font-weight: bold;
+    max-width: auto;
+    
+    margin: auto 5.5em;
+  }
+
+  .Nosotros-p {
+    font-size: 18px;
+    margin:auto 4em auto 0;
+  }
+
+
+  footer {
+    max-width:99.5%;
+        
+    /*Imagenes de fondo*/
+    background-image: url("../imagenes/fondo-textura-hormigon-oscuro.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
     
    
-    /*FOOTER*/
-  
-    footer {
-              
-        max-width: 100%;
-            
-  }
-  
-  
-  .footer-conteiner {
-    
-    flex-direction:column;
-    justify-content:center;
-    
-  }
-  .footer-conteiner-img{
-   opacity: 1; 
-   margin: 2em auto ;
-  }
-  
-  .social-icon {
-       background-image: url("/imagenes/linkedin.png");
- 
-  }
-  
-  .social-icon:nth-of-type(2){
-      background-image: url("/imagenes/github.png");
-      background-color: white;
-  } 
-  .social-icon:nth-of-type(3){
-      background-image: url("/imagenes/whatsapp.png");
-  } 
-  
-  .footer-conteiner-copy {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 12px;
-    color: var(--color-texto-invertido);
-  
-    margin: 5em 0 0 1em;
-  }
-  
-  
-  
-  
-  
+}
+
+}
   
 
-    }
+ 
+       
