--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,8 +18,8 @@
     --font-size-titulo: 60px;
 }
 html {
-background-image: url("/imagenes/fondo-textura-hormigon-oscuro.jpg");  
-background-size: cover;
+background-image: url("../imagenes/fondo_render1.png");  
+background-size: contain;
 font-family: 'Roboto', sans-serif;
 }
 body {
@@ -27,33 +27,37 @@ padding: 0 10px 0;
 }
 /*HEADER*/
 .header {
-  
+  background-image: url("../imagenes/navbar_fondo.png");
   background-repeat: no-repeat;
   background-size: contain;
   height: 800px;
   width: 98.5%;
   position: fixed;
   margin: 0 auto;
+  
 }
-
+.header-nav {
+  z-index: 1;
+}
 .nav {
   display: flex;
   margin: 0 auto;
   background-color: var(--navbar-color);    
   line-height: 30px;
-  z-index: 1;
-
 }
 
 .nav-link {
     color: var(--text-color-inverse);
     text-decoration: none;
+    
 }
 
 .nav-menu {
   display: flex;
   margin-right: 40px;
   list-style: none;
+  max-width: 1500px;
+  flex-wrap:nowrap; 
   
   
 }
@@ -73,13 +77,13 @@ padding: 0 10px 0;
     border-radius: 15px;
     transition: .5s;
 }
-.burguer-item {
-  display: none;
+.burger-item {
+  display:none;
 }
 
 .nav-buscador {
-    margin: 25px auto 0 auto;
-    border: 3px solid #020202;
+    margin: 30px auto 0 auto;
+    border: 2px solid #020202;
     border-radius: 8px;
     font-size: var((--font-size-normal)-4);
     max-height: 45px;
@@ -93,6 +97,8 @@ padding: 0 10px 0;
 .secciones-menu {
   
   display: flex;
+  flex-wrap: wrap;
+  
   color: var(--color-texto-invertido);
   margin: 1em auto;
   padding:0 0.5em;
@@ -104,10 +110,12 @@ padding: 0 10px 0;
   text-transform: uppercase;
   font-family: 'Bebas Neue', sans-serif;
   text-decoration:overline;
+  
 }
 .secciones-menu-link:hover {
   color: #c4c4c4;
 }
+
 /*MAIN*/
 
 /*SECCION DE HAPPYHOUR*/
@@ -117,10 +125,10 @@ padding: 0 10px 0;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
-  font-size: 35px;
+  font-size: 40px;
   
   margin: 0 5em 0;
-  padding: 2em 0 5em 0;
+  padding: 5em 0 5em 0;
   font-family: 'Oswald', sans-serif;
 
 }
@@ -178,7 +186,6 @@ padding: 0 10px 0;
   100% { opacity: 1.0; }
 }
 
-
 .happyhour-2x1 {
   color: var(--color-texto-invertido);
   text-align:justify;
@@ -204,7 +211,35 @@ padding: 0 10px 0;
   }
 }
 
-/**
+
+
+/*GALERIA DE IMAGENES*/
+
+.galeriadeimagenes {
+  
+  display: flex;
+  margin: 12em 4em 20em 4em ;
+  height: 600px;
+  z-index: 0;
+}
+.galeriadeimagenes-img {
+
+  width: 0px ;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: .5s ease;
+}
+.galeriadeimagenes-img:hover {
+  cursor:grab;
+  width: 800px;
+  height: 600px;
+  opacity: 1;
+  filter: contrast(150%);
+  
+}
+
+
 /*RECOMENDACION DE BEBIDA Y COMIDA*/
 
 .recomendacion {
@@ -216,11 +251,14 @@ padding: 0 10px 0;
   font-family: 'Bebas Neue', sans-serif;
   text-decoration:overline;
   filter: drop-shadow(0 0 3rem rgb(81, 3, 224,0.9));
+
+  scroll-margin-top: 150px;
 }
 /*COCKTAIL*/
 
 .cocktailSection { 
-  background-image: url("/imagenes/Comida1.jpg");
+  background-image: url("../imagenes/Comida1.jpg");
+  
 }
 .cocktailSection{
     
@@ -268,8 +306,6 @@ padding: 0 10px 0;
     max-height: 100px; /* Ajusta el valor según el espacio disponible */
     overflow: auto;
     font-family: 'Noto Sans', sans-serif;
-
-  
   }
    #mealImage {
     margin: 3em 0 0 42em;
@@ -278,9 +314,10 @@ padding: 0 10px 0;
     height: 220px;
 
    }
+   
   /*COMIDA*/
   .mealSection{
-    background-image: url("/imagenes/Comida.jpg");
+    background-image: url("../imagenes/Comida.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     max-width: 1100px;
@@ -315,12 +352,13 @@ padding: 0 10px 0;
   
   text-align: center;
   color: var(--color-texto-invertido);
-  margin:  5em auto 200px auto;
+  margin:  10em auto 0 auto;
   font-family: 'Bebas Neue', sans-serif;
 }
 .Nosotros-desarrollo {
   display: flex;
   flex-direction: row;
+  margin: 0 auto 20em auto
  
 }
 .Nosotros-img{
@@ -329,7 +367,7 @@ padding: 0 10px 0;
 }
 .Nosotros-p {
   font-size: 18px;
-  margin: 1em 4em 3em 4em;
+  margin: 1em 4em 0em 4em;
 }
 .Nosotros h3 {
   font-size: var(--font-size-titulo);
@@ -360,154 +398,21 @@ padding: 0 10px 0;
   bottom: 0;
 }
 
-
-
-/*CONTACTO*/
-
-.wave {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0;
-}
-
-#contactSection {
-    text-align: center;
-    background-color: #4d6160;
-    margin: 10px auto 0 auto;    
-    font-family: 'Bebas Neue', sans-serif;
-    max-width: 1200px;
-
-  }
-
-  .contact-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    background-color: #4d6160;
-    margin: 0 10em ;
-    line-height: 40px;
-
-    
-  }
-  .contact-left {
-    flex: 1;
-    margin: 44px 0 0 0;
-  }
-  .contact-right {
-    flex: 1;
-    margin: 42px 2em 5em 10em;
-  }
-  .contact-left h2 {
-    margin-bottom: 20px;
-    color: #e70b0b;
-  }
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0 0 0 ;
-  }
-  label {
-    margin-bottom: 5px;
-    color: #ec0909;
-  }
-  input,
-  textarea {
-    padding: 5px  0  0  20px ;
-    border-radius: 10px;
-    border: 1px solid var(--color-texto);
-    background-color: var(--color-texto-invertido);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  input:focus,
-  textarea:focus {
-    outline: none;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  }
-  .contact-button {
-    
-    width: 30%;
-    margin: 10px auto;
-    padding: 0px auto ;
-    color: var(--color-texto-invertido);
-    
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.3s, background-color 0.3s;
-  }
-  .contact-button:hover {
-    
-    transform: scale(1.5);
-    animation: rotateAnimation 2s infinite;
-    
-    
-  }
-  @keyframes rotateAnimation {
-    0% {
-      
-      transform: rotate(0deg);
-    }
-    33% {
-      transform: rotate(2deg);
-    }
-    66% {
-      transform: rotate(-2deg);
-    }
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-
-
-/*GALERIA DE IMAGENES*/
-
-.galeriatitulo {
-  font-size: var(--font-size-titulo);
-  text-align: center;
-  color: var(--color-texto-invertido);
-  margin:  5em auto 200px auto;
-  font-family: 'Bebas Neue', sans-serif;
-}
-
-.galeriadeimagenes {
-  
-  display: flex;
-  margin: 0 4em 5em 4em ;
-  
-  height: 500px;
-}
-.galeriadeimagenes img {
-
-  width: 0px ;
-  flex-grow: 1;
-  object-fit: cover;
-  opacity: 0.8;
-  transition: .5s ease;
-}
-.galeriadeimagenes img:hover {
-
-  cursor: crosshair;
-  max-width: 800px;
-  opacity: 1;
-  filter: contrast(120%);
-}
-
-
-
-
 /*RAMDON USER*/  
 
 .testimonial-section {
     
     padding: 40px 0;
     text-align:center ;
-    background-image: url("/imagenes/friends.png");
+    background-image: url("../imagenes/friends.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     overflow: auto;
     max-width: 1100px;
     height: 600px;
-    margin: 3em auto;
+    margin: 3em auto 20em auto;
+   
     
     
   }
@@ -530,7 +435,8 @@ padding: 0 10px 0;
   }
   .testimonial-box {
     box-sizing: border-box; /* Incluye el padding y el borde en el tamaño total */
-    
+    background-color: #020202;
+    opacity: 0.7;
     box-shadow: 20px #e41ae444;
     border: #6f1097 solid;
     border-radius: 50px;
@@ -564,10 +470,7 @@ padding: 0 10px 0;
     font-size: 14px; /* Modifica el tamaño de la fuente */
     
   }
-
-  .wave {
-    height: 10%;
-  }
+ 
 
 
  
@@ -580,7 +483,7 @@ padding: 0 10px 0;
     margin-left: 0;
     
     /*Imagenes de fondo*/
-    background-image: url("/imagenes/fondo-textura-hormigon-oscuro.jpg"); 
+    background-image: url("../imagenes/fondo-textura-hormigon-oscuro.jpg"); 
     background-size: cover;
     background-repeat: no-repeat;
     
@@ -611,7 +514,7 @@ padding: 0 10px 0;
     width: 40px;
     border-radius: 50px;
     /*border: 1px solid #f2f2f2f2;*/
-    background-image: url("/imagenes/linkedin.png");
+    background-image: url("../imagenes/linkedin.png");
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -624,11 +527,11 @@ padding: 0 10px 0;
 }
 
 .social-icon:nth-of-type(2){
-    background-image: url("/imagenes/github.png");
+    background-image: url("../imagenes/github.png");
     background-color: white;
 } 
 .social-icon:nth-of-type(3){
-    background-image: url("/imagenes/whatsapp.png");
+    background-image: url("../imagenes/whatsapp.png");
 } 
 
 .footer-conteiner-copy {
@@ -639,8 +542,5 @@ padding: 0 10px 0;
 
   margin: 5em 0 0 0;
 }
-
-
-
 
 
