--- a/css/estilo-mobile.css
+++ b/css/estilo-mobile.css
@@ -25,15 +25,11 @@
     }
       /*HEADER*/
       .header {
-        background-image: url("../imagenes/navbar_fondo.png");
-        background-size:cover;
-        background-repeat: no-repeat;
+        background-image:none;
         height: auto;
         max-width: 499px;
+        position: fixed;
       }
-      
-        
-       
       .burger-item {
         display: flex;
   
@@ -55,7 +51,9 @@
       }
       .nav-menu-item {
         margin: auto;
-        line-height: 70px;
+        line-height: 10px;
+        font-size: medium;
+
        }
        .nav-menu-link {
         padding: auto;
@@ -63,31 +61,9 @@
        .secciones-menu {
         display: none;
       }
-      .secciones-menu.active {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-        margin: auto;
-        padding:auto;
-      }
-      .secciones-menu-link {
-        
-        padding: auto;
-        font-size: var(--font-size-normal);
-        text-decoration:none;
-      }
-      .secciones-menu-link:hover {
-        color: #c4c4c4;
-        transform: scale(1.2);
-      }
       .happyhour {
-       
-        justify-content: center;
-        align-items: center;
-       
-      
-      }
+        font-size: 20px;
+       }
 
       .happyhour-2x1 {
         text-align:center;
@@ -100,62 +76,122 @@
    
   }
 
+  /*GALERIA DE IMAGENES*/
+
+.galeriadeimagenes {
+  
+  display: flex;
+  margin: auto 10px;
+  height: 400px;
+  z-index: 0;
+}
+
+.galeriadeimagenes-img:hover {
+  cursor:grab;
+  width: 500px;
+  height: 400px;
+  opacity: 1;
+  filter: contrast(110%);
+  
+}
+/*RECOMENDACION DE BEBIDA Y COMIDA*/
+
+.recomendacion {
+  margin: 3em 10px 20px 10px;
+  font-size: 40px;
+
+  scroll-margin-top: 150px;
+}
       .cocktailSection, .mealSection{
-      
+       
         max-width: auto;
         margin: 10px 10px;
         height: auto;
-        
+    }
+
+    #cocktailImage{
+      margin: 2em 0 0 2em;
+     
+      width: 200px;
+      height: 150px;
+      opacity: 1;
     }
     #cocktailInstructions {
-        font-size: 16px;
-        margin: 1px;
-        width: 30em;
+        font-size: 10px;
+        margin: 0;
+        width: 300px;
         max-height: auto; /* Ajusta el valor según el espacio disponible */
-        
+        overflow: auto;
+      }
+      #cocktailDetails {
+        margin: 10px 0 10px 50px;
+      }
+      #cocktailName, #mealName {
+        font-size: 26px;
+        margin: auto;
       }
   
      #mealInstructions {
-    font-size: 16px;
+    font-size: 10px;
     color: #ffff1f;
-    margin: 0 1em 1em 10em;
-    padding: 0 1em;
-    max-height: auto; /* Ajusta el valor según el espacio disponible */
+    margin: 0 1em 1em 5em;
+    
   }
    #mealImage {
-    margin: auto;
+    margin: auto 0px auto 10em;
     opacity: 0.9;
-    width: 320px;
-    height: 220px;
+    width: 200px;
+    height: 150px;
 
    }
     #mealName {
-    font-size: 26px;
-    font-weight: bold;
     max-width: auto;
-    
     margin: auto 5.5em;
   }
 
+  .Nosotros {
+    text-align: center;
+    margin: auto 10px;
+  }
+  .Nosotros-img{
+    display: none;
+  }
   .Nosotros-p {
-    font-size: 18px;
-    margin:auto 4em auto 0;
+    font-size: 14px;
+    margin: auto;
+  }
+  .testimonial-section {
+    
+    padding: 20px 0;
+    
+   background-size: 100% 100%;
+    overflow: auto;
+    max-width: auto;
+    height: auto;
+    margin: 3em auto 10em auto;
+  }
+  .testimonial-box {
+    opacity: 0.9;
+    border: #d4470f solid;
   }
 
-
   footer {
-    max-width:99.5%;
-        
+    max-width:auto;
+    
     /*Imagenes de fondo*/
     background-image: url("../imagenes/fondo-textura-hormigon-oscuro.jpg"); 
     background-size: cover;
     background-repeat: no-repeat;
-    
-   
+}
+.social-icon {
+  height: 30px;
+  width: 30px;
+
+}
+
+.footer-conteiner-copy {
+font-size: 10px;
+margin: 2em 0 0 0;
 }
 
 }
-  
-
- 
-       
