--- a/css/estilo.css
+++ b/css/estilo.css
@@ -290,7 +290,7 @@ padding: 0 10px 0;
   #cocktailName, #mealName {
     font-size: 35px;
     font-weight: bold;
-    width: 30em;
+    max-width: 30em;
     color:var(--text-color-inverse);
     margin-bottom: 10px;
     font-family: 'Bebas Neue', sans-serif;
